[B]Retrospect v5.7.x - Changelog - 2024-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: RTV NH Live stream (Fixes #1782).
* Updated: Posters for Dutch channels.
* Removed: Apple Movie Trailers (Fixes #1785).
* Changed: Default to Dash streams for TV4.