@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="5.7.9"
+        version="5.7.10"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -123,9 +123,9 @@
         <platform>all</platform>
         <license>GPL-3.0-or-later</license>
         <language>en nl de sv no lt lv fi</language>
-        <news>[B]Retrospect v5.7.9 - Changelog - 2024-04-01[/B]
+        <news>[B]Retrospect v5.7.10 - Changelog - 2024-04-27[/B]
 
-Minor updates for SVT and TV4 channels.
+This update includes minor fixes for some channels.
 
 [B]Framework related[/B]
 _None_
@@ -134,10 +134,11 @@ _None_
 _None_
 
 [B]Channel related[/B]
-* Fixed: SVT Nyheter &amp; Categories.
-* Fixed: Folder icons for TV4 Play (Fixes #1774).
-* Fixed: TV4 Play artwork did not work with HEAD requests.
-* Fixed: SVT subtitles were selecting the incorrect ones (Fixes #1777).
+* Fixed: RTV NH Live stream (Fixes #1782).
+* Updated: Posters for Dutch channels.
+* Removed: Apple Movie Trailers (Fixes #1785).
+* Changed: Default to Dash streams for TV4.
+* Fixed: NRK broken search
 
         </news>
         <assets>
