@@ -3,7 +3,7 @@ sonar.organization=retrospect
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=Retrospect
-sonar.projectVersion=5.7.9
+sonar.projectVersion=5.7.10
 sonar.python.version=3
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
